Fix gradient on safari not showing correctly

--- a/src/app/timezone/timezone.component.scss
+++ b/src/app/timezone/timezone.component.scss
@@ -15,7 +15,7 @@
   right: 0;
   width: 100%;
   z-index: 99999;
-  background: linear-gradient(to bottom, white, #ffffffd9, transparent);
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0.85), rgba(255, 255, 255, 0));
 
   @media (max-width: 599px) {
     top: 56px;
